@startuml
hide empty members
left to right direction

title QuestionModel interface

interface QuestionModel {
    requestAnswer()
    requestFollowUpAnswer()
}
interface StorageModel {
    readInteraction()
    getTopic()
    updateInteraction()
}
interface PromptFactory {
    getPrompt()
}
interface AiApi {
    send()
}
interface SoundService {
    beenOnAnswer()
}
interface FormatConverter {
    markdownToHtml()
}
interface GrammarDiffMarker {
    markChanges()
}
interface FollowUpHistoryBuilder {
    buildHistory()
}

QuestionModel --> StorageModel
QuestionModel --> PromptFactory
QuestionModel "1" --> "4" AiApi: GRAMMAR, OPEN_AI, CLAUDE, GCP
QuestionModel --> SoundService
QuestionModel --> FormatConverter
QuestionModel --> GrammarDiffMarker: GRAMMAR only
QuestionModel --> FollowUpHistoryBuilder

FollowUpHistoryBuilder --> StorageModel

@enduml
